Added more HTML structure

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+
+    <title>>> HIGHER OR LOWER?</title>
 </head>
 <body>
-    
+
+    <div class="arrows">
+        <div id="higher">
+
+        </div>
+
+        <div id="lower">
+
+        </div>
+
+        <div id="bet">
+
+        </div>
+    </div>
+
+    <div class="arena">
+        <div id="wheel">
+
+        </div>
+    </div>
+
+    <div class="points">
+        <p id="points"></p>
+        <p id="coins"></p>
+    </div>
+
+<!-- JavaScript -->
+<script src="script.js"></script>
 </body>
 </html>
